# python-hotspring

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  labels.yml  renovate.json
.github/workflows/: labels.yaml  linting.yaml  pr-labels.yaml  release-drafter.yaml  release.yaml  tests.yaml  typing.yaml
demo/: README.md  demo_color_cycle.py  demo_full_test.py  demo_set_light_red.py  demo_turn_off_all_lights.py  demo_turn_off_jet.py  demo_turn_on_jet.py
src/hotspring/: __init__.py  const.py  exceptions.py  hotspring.py  models.py
tests/: __init__.py  conftest.py  test_hotspring.py  test_models.py
tests/fixtures/: debug_data.json  fwiq_data.json  spa_connect_status.json  startup.json  status.json
